--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,19 @@
+/*-------------------------------------
+  Font
+-------------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;800&display=swap');
+
+/*-------------------------------------
+  Tailwind
+-------------------------------------*/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*-------------------------------------
+  General
+-------------------------------------*/
+body {
+  font-family: 'Montserrat', sans-serif;
+  @apply text-black;
+}
