--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 /*-------------------------------------
   Font
 -------------------------------------*/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
 
 /*-------------------------------------
   Tailwind
@@ -16,4 +16,35 @@
 body {
   font-family: 'Montserrat', sans-serif;
   @apply text-black;
+}
+
+/*-------------------------------------
+  Button
+-------------------------------------*/
+.primary-btn {
+  @apply bg-salmon-500 text-white;
+}
+
+.secondary-btn {
+  @apply bg-yellow-500 text-yellow-800;
+}
+
+.tertiary-btn {
+  @apply bg-salmon-100 text-salmon-700;
+}
+
+.quaternary-btn {
+  @apply bg-salmon-500 text-salmon-500;
+}
+
+.big-btn {
+  @apply px-9 py-3.5 text-lg;
+}
+
+.medium-btn {
+  @apply px-6 py-2.5 text-lg;
+}
+
+.small-btn {
+  @apply px-3 py-2 text-sm;
 }
