feat: add popular courses and app store sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ body {
 }
 
 .quaternary-btn {
-  @apply bg-salmon-500 text-salmon-500;
+  @apply border-2 border-salmon-500 text-salmon-500;
 }
 
 .big-btn {
