--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,11 +38,11 @@ body {
 }
 
 .big-btn {
-  @apply px-9 py-3.5 text-lg;
+  @apply px-8 py-3 md:px-9 md:py-3.5 md:text-lg;
 }
 
 .medium-btn {
-  @apply px-6 py-2.5 text-lg;
+  @apply px-6 py-2.5 md:text-lg;
 }
 
 .small-btn {
