chore: add hover and active states, and transitions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,15 +44,15 @@ body::-webkit-scrollbar-track {
   Button
 -------------------------------------*/
 .primary-btn {
-  @apply bg-salmon-500 text-white;
+  @apply bg-salmon-500 text-white  hover:brightness-110 active:brightness-100;
 }
 
 .secondary-btn {
-  @apply bg-yellow-500 text-yellow-800;
+  @apply bg-yellow-500 text-yellow-800 hover:brightness-105 active:brightness-100;
 }
 
 .tertiary-btn {
-  @apply bg-salmon-100 text-salmon-700;
+  @apply bg-salmon-100 text-salmon-700  hover:brightness-150;
 }
 
 .quaternary-btn {
